Fixed whitespace on the button.

--- a/SAP_Newsletter/style.css
+++ b/SAP_Newsletter/style.css
@@ -1,77 +1,82 @@
 body {
-    min-width: 220px;
-  }
-  
-  .center {
-    text-align: center;
-  }
-  
-  .button-80 {
-    background: #fff;
-    backface-visibility: hidden;
-    border-radius: .375rem;
-    border-style: solid;
-    border-width: .125rem;
-    box-sizing: border-box;
-    color: #212121;
-    cursor: pointer;
-    display: inline-block;
-    font-family: "Museo Sans", sans-serif;
-    font-size: 0.75rem;
-    font-weight: 700;
-    letter-spacing: -.01em;
-    line-height: 1.3;
-    padding: .775rem 1rem;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transform: translateZ(0) scale(1);
-    transition: transform .2s, opacity .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-  
-  .button-80:not(:disabled):hover {
-    transform: scale(1.05);
-    opacity: 0.8; /* Added opacity value */
-  }
-  
-  .button-80:not(:disabled):hover:active {
-    transform: scale(1.05) translateY(.125rem);
-  }
-  
-  .button-80:focus {
-    outline: 0 solid transparent;
-  }
-  
-  .button-80:focus:before {
-    content: "";
-    left: calc(-1 * .375rem);
-    pointer-events: none;
-    position: absolute;
-    top: calc(-1 * .375rem);
-    transition: border-radius;
-    user-select: none;
-  }
-  
-  .button-80:focus:not(:focus-visible) {
-    outline: 0 solid transparent;
-  }
-  
-  .button-80:focus:not(:focus-visible):before {
-    border-width: 0;
-  }
-  
-  .button-80:not(:disabled):active {
-    transform: translateY(.125rem);
-  }
-  
-  .button-80:not(:disabled):hover {
-    background: #0563C1;
-    color: #fff;
-    transform: scale(1.05);
-  }
+  min-width: fit-content;
+  margin: unset;
+}
+
+.center {
+  text-align: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.button-80 {
+  background: #fff;
+  backface-visibility: hidden;
+  /* border-radius: .375rem; */
+  white-space: nowrap;
+  border-style: solid;
+  border-width: .02rem;
+  box-sizing: border-box;
+  color: #0563C1;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Museo Sans", sans-serif;
+  font-size: 0.75rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .775rem 1rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s, opacity .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-80:not(:disabled):hover {
+  transform: scale(1.05);
+  opacity: 0.8; /* Added opacity value */
+}
+
+.button-80:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+}
+
+.button-80:focus {
+  outline: 0 solid transparent;
+}
+
+.button-80:focus:before {
+  content: "";
+  left: calc(-1 * .375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1 * .375rem);
+  transition: border-radius;
+  user-select: none;
+}
+
+.button-80:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.button-80:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.button-80:not(:disabled):active {
+  transform: translateY(.125rem);
+}
+
+.button-80:not(:disabled):hover {
+  background: #0563C1;
+  color: #fff;
+  transform: scale(1.05);
+}
   
   /*************************************************JS STYLES**************************************************************/
 
